Refactored Test classes