@@ -6,6 +6,8 @@ import com.takshakbist.osms.dtos.course.AddCourseDTO;
 import com.takshakbist.osms.dtos.course.AddCourseInClassroomDTO;
 import com.takshakbist.osms.entities.Course;
 import com.takshakbist.osms.services.Impl.CourseServiceImpl;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -38,18 +40,36 @@ class CourseControllerTest {
     private CourseController courseController;
 
     private final ObjectMapper objectMapper = new ObjectMapper();
+    private MockMvc mockMvc;
+    private AddCourseDTO expectedDTO;
+
+    private AddCourseDTO inputDTO ;
+
+    private Course course;
+
+    @BeforeEach
+    public void setUp(){
+        mockMvc = MockMvcBuilders.standaloneSetup(courseController).build();
+        expectedDTO = new AddCourseDTO();
+        inputDTO = new AddCourseDTO();
+        course = new Course();
+    }
+
+    @AfterEach
+    public void tearDown(){
+        mockMvc = null;
+        expectedDTO = null;
+        inputDTO = null;
+        course = null;
+    }
 
     @Test
     void givenCourse_WhenAddCourse_ShouldReturnHTTPCREATED() throws Exception {
 
-        AddCourseDTO inputDTO = new AddCourseDTO();
-
-        Course course = new Course();
 
         when(courseService.add(any(AddCourseDTO.class))).thenReturn(course);
         when(mapper.courseToAddCourseDTO(any(Course.class))).thenReturn(inputDTO);
 
-        MockMvc mockMvc = MockMvcBuilders.standaloneSetup(courseController).build();
 
         mockMvc.perform(MockMvcRequestBuilders.post("/api/course")
                         .contentType(MediaType.APPLICATION_JSON)
@@ -62,14 +82,10 @@ class CourseControllerTest {
     void givenCourse_WhenUpdateCourse_ShouldReturnHTTPOK() throws Exception {
 
         Long courseId = 1L;
-        AddCourseDTO inputDTO = new AddCourseDTO();
-
-        Course course = new Course();
         when(courseService.update(any(Long.class), any(AddCourseDTO.class))).thenReturn(course);
 
         when(mapper.courseToAddCourseDTO(any(Course.class))).thenReturn(inputDTO);
 
-        MockMvc mockMvc = MockMvcBuilders.standaloneSetup(courseController).build();
 
         mockMvc.perform(MockMvcRequestBuilders.put("/api/course/{id}", courseId)
                         .contentType(MediaType.APPLICATION_JSON)
@@ -83,12 +99,11 @@ class CourseControllerTest {
         Long classroomId = 1L;
         AddCourseInClassroomDTO inputDTO = new AddCourseInClassroomDTO();
 
-        Course course = new Course();
+
         when(courseService.addInClassroom(any(Long.class), any(AddCourseInClassroomDTO.class))).thenReturn(course);
 
         when(mapper.courseToAddCourseInClassroomDTO(any(Course.class))).thenReturn(inputDTO);
 
-        MockMvc mockMvc = MockMvcBuilders.standaloneSetup(courseController).build();
 
 
         mockMvc.perform(MockMvcRequestBuilders.put("/api/course/add/{id}", classroomId)
@@ -102,14 +117,12 @@ class CourseControllerTest {
     void givenId_WhenGetCourseById_ShouldReturnHTTPOK() throws Exception {
 
         Long courseId = 1L;
-        AddCourseDTO expectedDTO = new AddCourseDTO();
 
-        Course course = new Course();
+
         when(courseService.getById(any(Long.class))).thenReturn(course);
 
         when(mapper.courseToAddCourseDTO(any(Course.class))).thenReturn(expectedDTO);
 
-        MockMvc mockMvc = MockMvcBuilders.standaloneSetup(courseController).build();
 
 
         mockMvc.perform(MockMvcRequestBuilders.get("/api/course/{id}", courseId))
@@ -120,16 +133,12 @@ class CourseControllerTest {
     @Test
     void givenCourses_WhenGetAllCourses_ShouldReturnHTTP200() throws Exception {
 
-        AddCourseDTO expectedDTO = new AddCourseDTO();
-        Course course = new Course();
 
         when(courseService.getAll(any(String.class))).thenReturn(Collections.singletonList(course));
 
         when(mapper.courseToAddCourseDTO(any(Course.class))).thenReturn(expectedDTO);
 
-        MockMvc mockMvc = MockMvcBuilders.standaloneSetup(courseController).build();
 
-        // When/Then
         mockMvc.perform(MockMvcRequestBuilders.get("/api/course/get/{field}", "fieldName"))
                 .andExpect(status().isOk())
                 .andDo(print());
@@ -137,18 +146,16 @@ class CourseControllerTest {
 
     @Test
     void givenCourses_WhenFilterCourseByStartDate_ShouldReturnHTTPOK() throws Exception {
-        // Given
         DateTimeDTO dateTimeDTO = new DateTimeDTO();
         String field = "startDate";
         String basis = "basis";
 
-        List<AddCourseDTO> expectedDTOs = Collections.singletonList(new AddCourseDTO());
+        List<AddCourseDTO> expectedDTOs = List.of(expectedDTO);
 
-        when(courseService.filterByStartDate(any(), any(String.class))).thenReturn(Collections.singletonList(new Course()));
+        when(courseService.filterByStartDate(any(), any(String.class))).thenReturn(List.of(course));
 
         when(mapper.courseToAddCourseDTO(any(Course.class))).thenReturn(expectedDTOs.get(0));
 
-        MockMvc mockMvc = MockMvcBuilders.standaloneSetup(courseController).build();
 
 
         mockMvc.perform(MockMvcRequestBuilders.get("/api/course/filter/{field}/{basis}", field, basis)
@@ -165,7 +172,6 @@ class CourseControllerTest {
 
         when(courseService.delete(any(Long.class))).thenReturn("Deleted successfully");
 
-        MockMvc mockMvc = MockMvcBuilders.standaloneSetup(courseController).build();
 
         mockMvc.perform(MockMvcRequestBuilders.delete("/api/course/{id}", courseId))
                 .andExpect(status().isOk())
@@ -179,15 +185,12 @@ class CourseControllerTest {
         int pageSize = 10;
         String field = "fieldName";
 
-        AddCourseDTO expectedDTO = new AddCourseDTO();
+
 
         when(courseService.getWithPaginationAndSorting(any(int.class), any(int.class), any(String.class)))
-                .thenReturn(new PageImpl<>(Collections.singletonList(new Course())));
+                .thenReturn(new PageImpl<>(List.of(course)));
 
         when(mapper.courseToAddCourseDTO(any(Course.class))).thenReturn(expectedDTO);
-
-        MockMvc mockMvc = MockMvcBuilders.standaloneSetup(courseController).build();
-
 
         mockMvc.perform(MockMvcRequestBuilders.get("/api/course/page/{pageNumber}/{pageSize}/{field}",
                         pageNumber, pageSize, field))
